--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,11 +13,13 @@
     <string name="dishlist1">Lançamentos</string>
     <string name="dishlist2">Mais Populares</string>
     <string name="dishname5">Pão com abacate e ovos</string>
-    <string name="dishprice5">" partir de R$ 16,99"</string>
+    <string name="dishprice5">"A partir de R$ 16,99"</string>
     <string name="dishname6">Frango grelhado com molho</string>
-    <string name="dishprice6">" partir de R$ 20,00"</string>
+    <string name="dishprice6">"A partir de R$ 20,00"</string>
     <string name="dishname7">X-Ovo</string>
-    <string name="dishprice7">" partir de R$ 10,00"</string>
+    <string name="dishprice7">"A partir de R$ 10,00"</string>
     <string name="dishname8">Salada de frango</string>
-    <string name="dishprice8">" partir de R$ 15,00"</string>
+    <string name="dishprice8">"A partir de R$ 15,00"</string>
+    <string name="switchpage">Trocar Página</string>
+    <string name="title_activity_main2">MainActivity2</string>
 </resources>
